iss#232 Make Media Files load work for LA and MP3 artifacts, enable and make test testGetMediaFiles pass